Fixed the scrollbar bug

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@ html {
   font-family: "Arial", sans-serif;
   height: 100%;
   color: #ffffff;
-  overflow-x: hidden;
 }
 
 /* Particles Background */
